Fix vertical overflow issue on skills page, update ReadMe document

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,7 +26,7 @@ a.button:active {
 }
 
 div.card-container {
-	margin: 20px auto;
+	margin: 1.25rem auto;
 	max-width: 960px;
 	text-align: center;
 }
