--- a/styles/skills.css
+++ b/styles/skills.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+	margin-top: 1.25rem;
 }
 
 .overall-skills-grid {
